--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
 <h3>Hello obepce! :*</h3>
+
+
+<!--
+  Markup: 
+  <div>test123</div>
+
+  Code behind:
+    const div = document.createElement('div');
+    div.textContent = 'test123';
+    const appRoot = document.getElementById('app-root');
+    appRoot.appendChild(div)
+-->
