AN - Navigation component with templateUrls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h3>Hello obepce! :*</h3>
-
-<app-nav>{{title}}</app-nav>
-
 <!--
   Markup: 
   <div>test123</div>
@@ -12,3 +8,5 @@
     const appRoot = document.getElementById('app-root');
     appRoot.appendChild(div)
 -->
+
+<app-navigation />
