AN - proper navigation component

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,5 @@
-<h2>Hi from navigation2</h2>
+<nav id="wrapper">
+    <div class="btn">Home</div>
+    <div class="btn">About</div>
+    <div class="btn">Contact</div>
+  </nav>
