--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,1 +1,10 @@
-<p>user-list works!</p>
+<ul>
+    <li *ngFor="let user of users; index as i">
+      <span [class]="user?.status">
+        name of {{ user.name }} and {{ user.age }} y/o
+      </span>
+      <!-- <span *ngIf="i % 2 !== 0" style="background-color: pink">
+        name of {{ user.name }} and {{ user.age }} y/o
+      </span> -->
+    </li>
+  </ul>
